# withoutbg

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: ci.yml  docker-release.yml
apps/web/: Dockerfile  docker-compose.yml
apps/web/backend/: Dockerfile  pyproject.toml
apps/web/backend/app/: main.py
apps/web/frontend/: package-lock.json  package.json
apps/web/frontend/src/: api.js
apps/web/frontend/src/components/demo/: RemoveBackground.jsx
docs/: MIGRATION.md
examples/: remove_background_local.py
src/withoutbg/: __init__.py  __version__.py  models.py
tests/: test_models.py
tests/performance/: test_benchmarks.py  test_memory_usage.py
