[project]
name = "withoutbg-backend"
version = "1.3.1"
description = "FastAPI backend for withoutbg web application"
requires-python = ">=3.12"
dependencies = [
    "withoutbg",  # Install from ../../../packages/python in development
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pillow>=8.0.0",
    "pillow-heif>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
withoutbg = { path = "../../../packages/python", editable = true }
